--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  font-family: 'Raleway', sans-serif;
 }
 
 h1 {
@@ -143,13 +144,12 @@ h3 {
 }
 
 #cover {
-  /* background: rgba(248, 168, 209, 0.3); */
   height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 10px;
 }
 
 /* Left side of webpage styling */
@@ -162,6 +162,13 @@ h3 {
   overflow: hidden;
 }
 
+@supports (-webkit-backdrop-filter:none) or (backdrop-filter: none) {
+  .classList {
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.2);
+  }
+}
+
 .calculator {
   width: 30vw;
   padding: 10px;
@@ -169,89 +176,50 @@ h3 {
   background-color: rgba(255, 228, 225, 0.9);
 }
 
-.toggle, .toggle:before, .slot__label, .curtain {
-	transition-property: background-color, transform, visibility;
-	transition-duration: 0.25s;
-	transition-timing-function: ease-in, cubic-bezier(0.6,0.2,0.4,1.5), linear;
-}
-.toggle:before, .slot, .slot__label {
-	display: block;
-}
-.toggle:before, .curtain {
-	position: absolute;
-}
-.toggle:checked, .curtain {
-	background-color: #2b7f3a;
-}
-.toggle:focus {
-	outline: transparent;
-}
-.toggle {
-	border-radius: 0.75em;
-	box-shadow: 0 0 0 0.1em inset;
-	cursor: pointer;
-	position: relative;
-	margin-right: 0.25em;
-	width: 3em;
-	height: 1.5em;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	-webkit-tap-highlight-color: transparent;
-}
-.toggle:before {
-	background: currentColor;
-	border-radius: 50%;
-	content: "";
-	top: 0.2em;
-	left: 0.2em;
-	width: 1.1em;
-	height: 1.1em;
-}
-.toggle:checked:before {
-	transform: translateX(1.5em);
-}
-.toggle:checked ~ .slot .slot__label, .slot__label:nth-child(2) {
-	transform: translateY(-50%) scaleY(0);
-}
-.toggle:checked ~ .slot .slot__label:nth-child(2) {
-	transform: translateY(-100%) scaleY(1);
-}
-.toggle:checked ~ .curtain {
-	transform: scaleX(1);
-}
-.slot {
-	color: transparent;
-	font-size: 1.5em;
-	font-weight: bold;
-	letter-spacing: 0.1em;
-	line-height: 1;
-	overflow: hidden;
-	height: 1em;
-	text-indent: -0.9em;
-	-webkit-text-stroke: 0.05em #fff;
-}
-.slot__label {
-	transform-origin: 50% 0;
-}
-.slot__label:nth-child(2) {
-	transform-origin: 50% 100%;
-}
-.curtain {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	transform: scaleX(0);
-	transform-origin: 0 50%;
-	z-index: -1;
+table {
+  width: 100%;
+  table-layout: fixed;
 }
 
-@supports (-webkit-backdrop-filter:none) or (backdrop-filter: none) {
-  .classList {
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.3);
-  }
+.tbl-header {
+  background-color: rgba(255,255,255,0.3);
+}
+
+.tbl-content {
+  height: 25vh;
+  overflow-x: auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255,255,255,0.3);
+}
+
+th {
+  padding: 15px 10px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: black;
+  text-transform: uppercase;
+}
+td {
+  padding: 10px;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-bottom: solid 1px rgba(255,255,255,0.3);
+  font-size: 12px;
+}
+
+::-webkit-scrollbar {
+  width:6px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
 
 /* Progress Wheel */
@@ -346,6 +314,53 @@ svg {
   margin-top:-250px;
 }
 
+.collegesContainer {
+  border-radius: 25px;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #9BD8E4;
+  height: 30vh;
+}
+
+.collegesContainer .tbl-content {
+  height: 13vh;
+}
+
+.colleges {
+  height: 150px;
+}
+
+#classInput, #gradeInput {
+  background-color: #9BD8E4;
+  border: solid 1px black;
+  border-radius: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-family: 'Playfair Display';
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+#createClassBtn {
+  background-color: #EA0052;
+  font-weight: bold;
+  font-family: 'Playfair Display';
+  text-transform: uppercase;
+  border: 1px solid black;
+  color: white;
+  padding: 5px;
+  border-radius: 30px;
+}
+
+input[type = 'radio'], #r1 {
+  accent-color: #FF0068;
+}
 
 
-
+input[type = 'radio'], #r2 {
+  accent-color: #F88F00;
+}
